# hyprland-settings

./: .gitignore  AppRun  CHANGELOG.md  ML4W_Hyprland_Settings-x86_64.AppImage  README.md  build.sh  com.ml4w.hyprland.settings.desktop  com.ml4w.hyprland.settings.json  com.ml4w.hyprlandsettings.json  com.ml4w.hyprlandsettings.pkginst  install.sh  meson.build  ml4w-dotfiles-settings.desktop  ml4w-hyprland-settings.desktop  pyproject.toml  setup.pkginst  setup.sh
data/: com.ml4w.hyprlandsettings.desktop.in  com.ml4w.hyprlandsettings.gschema.xml  com.ml4w.hyprlandsettings.metainfo.xml.in  com.ml4w.hyprlandsettings.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
release/: ML4W_Hyprland_Settings-x86_64.AppImage
src/: hyprland-settings.gresource.xml  hyprland-settings.in  main.py  meson.build  settings.json  settings.py  settings.ui  window.py  window.ui
src/json/: hyprctl_description.json
src/scripts/: hyprctl.sh
tests/: conftest.py  test_setup_validation.py
tests/unit/: test_example.py
